--- a/src/components/SearchHeader/SearchHeader.css
+++ b/src/components/SearchHeader/SearchHeader.css
@@ -26,7 +26,8 @@ header h1 {
   border: none;
   border-radius: 2px;
   box-shadow: 0 1px 1px #222;
-  height: 30px;
+  height: 45px;
+  font-size: 30px;
   padding: 0 5px;
   width: 300px;
 }
@@ -37,5 +38,6 @@ header h1 {
   border-radius: 2px;
   box-shadow: 0 1px 1px #222;
   color: #FAFAFA;
-  height: 30px;
+  height: 45px;
+  font-size: 30px;
 }
