--- a/src/components/SearchHeader/SearchHeader.css
+++ b/src/components/SearchHeader/SearchHeader.css
@@ -38,6 +38,7 @@ header h1 {
   border-radius: 2px;
   box-shadow: 0 1px 1px #222;
   color: #FAFAFA;
+  cursor: pointer;
   height: 45px;
   font-size: 30px;
 }
